finished hw4